# cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
example/: app_command.py  app_controller.py  app_module.py  main.py
example/src/test/: test_command.py
example_ms1/: app_controller.py  app_service.py  main.py
src/nestipy_cli/: cli.py  config.py  frontend.py  handler.py  repl.py  server.py  style.py
src/nestipy_cli/templates/: generator.py
src/nestipy_cli/templates/fullstack/: Dockerfile  cli.py  db.sqlite  docker-compose.yml  main.py  pyproject.toml
src/nestipy_cli/templates/fullstack/migrations/versions/: 44f4aec6e0e2_.py
src/nestipy_cli/templates/fullstack/src/: app_module.py
src/nestipy_cli/templates/fullstack/src/auth/: auth_controller.py  auth_dto.py  auth_guard.py  auth_module.py  auth_service.py  auth_util.py
src/nestipy_cli/templates/fullstack/src/user/: user_controller.py  user_dto.py  user_model.py  user_module.py  user_service.py
src/nestipy_cli/templates/fullstack/src/web/: web_controller.py
src/nestipy_cli/templates/fullstack/views/: index.html
src/nestipy_cli/templates/inertia/: .gitignore  README.md  cli.py  main.py  pyproject.toml
src/nestipy_cli/templates/inertia/src/: app_controller.py  app_module.py  app_service.py
src/nestipy_cli/templates/project/: .gitignore  app_controller.py  app_service.py  main.py  pyproject.toml  requirements.txt
src/nestipy_cli/templates/project/src/: app_controller.py  app_module.py  app_service.py
src/nestipy_cli/templates/views/: command.txt  controller.txt  input.txt  resolver.txt  service.txt  single_resolver.txt
src/nestipy_cli/templates/views/web_scaffold/: README.md  app_actions.py  app_controller.py  app_module.py  app_service.py
src/nestipy_cli/templates/views/web_scaffold/app/: error.py  layout.py  notfound.py  page.py  state.py
tests/: test_granian_server.py
(+19 files in other folders)
