[tool.poetry]
name = "nestipy-cli"
version = "0.4.0"
description = "Nestipy is a Python framework built on top of FastAPI that follows the modular architecture of NestJS"
authors = ["tsiresymila <tsiresymila@gmail.com>"]
readme = "README.md"
packages = [{include = "nestipy_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
click-aliases = "^1.0.4"
questionary = "^2.0.1"
aiofile = "^3.8.8"
autoflake = "^2.3.1"
isort = "^5.13.2"
autopep8 = "^2.1.0"
minijinja = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
yaspin = "^3.0.2"
rich-click = "^1.8.3"
watchdog = "^4.0.1"
hachiko = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nestipy = "nestipy_cli.cli:main"
