[project]
name = "nestipy-cli"
version = "0.7.3"
description = "Nestipy is a Python framework built on top of FastAPI that follows the modular architecture of NestJS"
authors = [{ name = "tsiresymila", email = "tsiresymila@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "click>=8.1.7,<9",
    "click-aliases>=1.0.4,<2",
    "questionary>=2.0.1,<3",
    "aiofile>=3.9.0,<4",
    "autoflake>=2.3.1,<3",
    "isort>=5.13.2,<6",
    "autopep8>=2.1.0,<3",
    "minijinja>=2.2.0,<3",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "yaspin>=3.1.0,<4",
    "rich-click>=1.8.3,<2",
    "watchdog>=4.0.1,<5",
    "hachiko>=0.4.0,<0.5",
    "nestipy>=0.7.5",
]

[project.scripts]
nestipy = "nestipy_cli.cli:main"

[tool.hatch.build.targets.sdist]
include = ["src/nestipy_cli"]

[tool.hatch.build.targets.wheel]
include = ["src/nestipy_cli"]

[tool.hatch.build.targets.wheel.sources]
"src/nestipy_cli" = "nestipy_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
